--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             </div>
 
             <div class="side-nav">
-                <img src="images/logo.png" class="logo">
+                <img src="logo.png" class="logo">
                 <a href="#">LATEST PROJECTS</a>
             </div>
             <div class="text-box">
                 <p>WE HELP YOU TO</p>
                 <h1>Design Your Journey</h1>
                 <dic class="icon">
-                    <img src="images/arrow.png">
+                    <img src="arrow.png">
                 </dic>
             </div>
         </div>
