--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="header">
             <div class="top-nav">
                 <ul>
-                    <li><a href="file:///C:/Users/elev/Desktop/Website/index.html">HOME</a></li>
+                    <li><a href="https://kurdvx.github.io/skolprojekt.github.io/">HOME</a></li>
                     <li><a href="https://sites.google.com/elev.ga.ntig.se/our-work/startsida">OUR WORK</a></li>
                     <li><a href="https://sites.google.com/elev.ga.ntig.se/contact-information/startsida">WHAT WE DO</a></li>
                     <li><a href="https://sites.google.com/elev.ga.ntig.se/about-us/startsida">ABOUT US</a></li>
@@ -19,7 +19,7 @@
 
             <div class="side-nav">
                 <img src="logo.png" class="logo">
-                <a href="#">LATEST PROJECTS</a>
+                <a href="https://docs.google.com/document/d/1rPZGoe0f7KrzMtDPysNFOQrmMZkNL6qlfJhomTlsXm4/edit">LATEST PROJECTS</a>
             </div>
             <div class="text-box">
                 <p>WE HELP YOU TO</p>
