--- a/index.html
+++ b/index.html
@@ -14,18 +14,29 @@
                     <li><a href="https://sites.google.com/elev.ga.ntig.se/contact-information/startsida">WHAT WE DO</a></li>
                     <li><a href="https://sites.google.com/elev.ga.ntig.se/about-us/startsida">ABOUT US</a></li>
                 </ul>
-                <button>Contact Us</button>
+<html lang="en" dir="itr">
+    <head>
+        <meta charset="utf-8">
+        <title>Glow Shadow Hover Button</title>
+        <link rel="stylesheet" href="style.css">
+        </head>
+        <body>
+
+            <a href="https://www.youtube.com/watch?v=Pcf4F5xa1xs" class="btn">Contact Us</a>
+
+        </body>
+</html>
             </div>
 
             <div class="side-nav">
-                <img src="logo.png" class="logo">
+                <img src="images/logo.png" class="logo">
                 <a href="https://docs.google.com/document/d/1rPZGoe0f7KrzMtDPysNFOQrmMZkNL6qlfJhomTlsXm4/edit">LATEST PROJECTS</a>
             </div>
             <div class="text-box">
                 <p>WE HELP YOU TO</p>
                 <h1>Design Your Journey</h1>
                 <dic class="icon">
-                    <img src="arrow.png">
+                    <img src="images/arrow.png">
                 </dic>
             </div>
         </div>
