--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Design Your Journey - Elias, Rebin</title>
+        <title>Design Your Website - Elias, Rebin</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -34,7 +34,7 @@
             </div>
             <div class="text-box">
                 <p>WE HELP YOU TO</p>
-                <h1>Design Your Journey</h1>
+                <h1>Design Your Website</h1>
                 <dic class="icon">
                     <img src="arrow.png">
                 </dic>
