--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </head>
         <body>
 
-            <a href="https://www.youtube.com/watch?v=Pcf4F5xa1xs" class="btn">Contact Us</a>
+            <a href="https://sites.google.com/elev.ga.ntig.se/our-contact-information/startsida" class="btn">Contact Us</a>
 
         </body>
 </html>
