--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <img src="arrow.png"img>
                 </dic>
             </div>
+            <div class="first_page_sep"></div>
         </div>
 
     </body>
